...
                android:layout_toRightOf="@+id/pie_chart_medicine" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selecionar UBS"
                android:id="@+id/buttonSelectUbs"
                android:minWidth="88dp"
                android:minHeight="54dp"
                android:layout_marginRight="8dp"
                android:layout_alignWithParentIfMissing="false"
                android:textColor="@color/colorPrimaryText"
                android:singleLine="false"
...
